After Architecure Creation

--- a/EventManagmentMVCCore/appsettings.json
+++ b/EventManagmentMVCCore/appsettings.json
@@ -1,9 +1,27 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=EventDB;Integrated Security=True",
+    "SqlConnection_OLd": "Data Source=10.150.21.149;Initial Catalog=ODS;User Id=laureateapiservice;Password="
+  },
+  "EmailConfig": {
+    "Port": 25,
+    "Host": "smtp.think.vpc",
+    "EnableSsl": false,
+    "FromAddress": "noreply@laureate.net.au",
+    "IsTest": "Yes",
+    "ToAddress": "Abdul.Rub@torrens.edu.au;shaun.hunter@torrens.edu.au"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "connString": "Data Source=DESKTOP-4BSD0GC;Initial Catalog=EfCore;Integrated Security=True",
+  "Jwt": {
+    "Key": "94239472934982374982374987",
+    "Issuer": "abdulrubeducation"
+  }
 }
