--- a/EventManagmentMVCCore/EventManagmentMVCCore.csproj
+++ b/EventManagmentMVCCore/EventManagmentMVCCore.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Event.DAL\Event.DAL.csproj" />
+    <ProjectReference Include="..\Event.DOM\Event.DOM.csproj" />
+  </ItemGroup>
+
 </Project>
