--- a/EventManagmentMVCCore/appsettings.json
+++ b/EventManagmentMVCCore/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=LAPTOP-GJ6JD14G;Initial Catalog=EventDB;Integrated Security=True",
+    //"SqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=EventDB;Integrated Security=True",
+    "SqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=EventDB;Integrated Security=True",
     "SqlConnection_OLd": "Data Source=10.150.21.149;Initial Catalog=ODS;User Id=laureateapiservice;Password="
   },
   "EmailConfig": {
