--- a/EventManagmentMVCCore/appsettings.json
+++ b/EventManagmentMVCCore/appsettings.json
@@ -24,5 +24,32 @@
   "Jwt": {
     "Key": "94239472934982374982374987",
     "Issuer": "abdulrubeducation"
+  },
+  "AWSLoadBalancerAuthorization": true,
+  "TorrensSharedSecret": "value",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "Console"
+            },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "\\Logs\\App.log"
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithCorrelationIdHeader" ],
+    "Properties": {
+      "Application": "EventManagmentMVCCore"
+    }
   }
 }
