After Identity Removal

--- a/EventManagmentMVCCore/appsettings.json
+++ b/EventManagmentMVCCore/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"SqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=EventDB;Integrated Security=True",
-    "SqlConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=EventDB;Integrated Security=True",
-    "SqlConnection_OLd": "Data Source=10.150.21.149;Initial Catalog=ODS;User Id=laureateapiservice;Password="
+    "SqlConnection": "Data Source=LAPTOP-GJ6JD14G;Initial Catalog=EventDB;Integrated Security=True",
+    "SqlConnection_OLd": "Data Source=10.150.21.149;Initial Catalog=ODS;User Id=laureateapiservice;Password=",
+    "EventDBContextConnection": "Server=LAPTOP-GJ6JD14G;Database=EventDB;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "EmailConfig": {
     "Port": 25,
@@ -20,7 +20,7 @@
     }
   },
   "AllowedHosts": "*",
-  "connString": "Data Source=DESKTOP-4BSD0GC;Initial Catalog=EfCore;Integrated Security=True",
+  "connString": "Data Source=DESKTOP-4BSD0GC;Initial Catalog=EventDB;Integrated Security=True",
   "Jwt": {
     "Key": "94239472934982374982374987",
     "Issuer": "abdulrubeducation"
@@ -47,9 +47,13 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithCorrelationIdHeader" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithCorrelationIdHeader"
+    ],
     "Properties": {
-      "Application": "EventManagmentMVCCore"
+      "Application": "EventManagment"
     }
   }
 }
